# advent-of-code

./: .clang-format  .gitignore  README.md
year-2015/day-1/: CMakeLists.txt  main.cpp
year-2015/day-1/part-1/: question.md
year-2015/day-1/part-2/: main.cpp  question.md
year-2015/day-1/src/: CMakeLists.txt
year-2015/day-1/tests/: CMakeLists.txt
year-2015/day-2/: main.cpp  question.md
year-2015/day-2/part-2/: CMakeLists.txt  main.cpp  question.md
year-2015/day-3/part-1/: CMakeLists.txt  main.cpp  notes  question.md
year-2015/day-3/part-2/: main.cpp  question.md
year-2015/day-4/part-1/: CMakeLists.txt  dynamic_bitset.cpp  dynamic_bitset.hpp  main.cpp  question.md
year-2015/day-4/part-2/: CMakeLists.txt  main.cpp  md5.cpp  question.md
year-2015/day-5/part-1/: CMakeLists.txt  main.cpp  question.md
year-2015/day-5/part-2/: main.cpp  question.md
year-2015/day-6/part-1/: main.cpp  question.md
year-2015/day-6/part-2/: CMakeLists.txt  main.cpp  question.md
year-2015/day-7/part-1/: question.md
year-2023/day-1/: CMakeLists.txt
